objects/FieloCH__Team__c.object
<CustomObject>
    <fields>
        <fullName>FieloCH__AttachmentId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AttachmentId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCH__Picture__c</fullName>
        <formula>IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;+ $Setup.FieloEE__PublicSettings__c.FieloEE__ChallengesPrefix__c + FieloCH__AttachmentId__c, Name, 60, 60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCH__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>FieloEE__Program__c</referenceTo>
        <relationshipLabel>Teams</relationshipLabel>
        <relationshipName>Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Team</label>
    <listViews>
        <fullName>FieloCH__All</fullName>
        <columns>NAME</columns>
        <columns>FieloCH__Program__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieloCH__Program_Required</fullName>
        <active>true</active>
        <description>Checks that when editing a team, program field is completed</description>
        <errorConditionFormula>AND(NOT( ISNEW() ), OR(ISNULL( FieloCH__Program__c ),  ISBLANK(FieloCH__Program__c) ) )</errorConditionFormula>
        <errorDisplayField>FieloCH__Program__c</errorDisplayField>
        <errorMessage>The Team must belong to a Program.</errorMessage>
    </validationRules>
</CustomObject>